# agentrun-sandbox-demos

./: .gitignore  README.md  README_CN.md
sandbox-all-in-one-demo/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
sandbox-all-in-one-demo/data/: .gitkeep
sandbox-all-in-one-demo/docs/: OVERVIEW.md
sandbox-all-in-one-demo/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
sandbox-all-in-one-demo/frontend/public/static/: vnc-iframe.html
sandbox-all-in-one-demo/frontend/src/: App.tsx  index.css
sandbox-all-in-one-demo/frontend/src/components/chat/: ChatPanel.tsx  ExecutableCodeBlock.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
sandbox-all-in-one-demo/frontend/src/components/layout/: AppLayout.tsx  Header.tsx  LeftPanel.tsx  RightPanel.tsx  Sidebar.tsx
sandbox-all-in-one-demo/frontend/src/components/playground/: CodeEditor.tsx  LogViewer.tsx  Terminal.tsx  VNCViewer.tsx
sandbox-all-in-one-demo/frontend/src/components/ui/: badge.tsx  button.tsx  resizable.tsx  scroll-area.tsx  tabs.tsx
sandbox-all-in-one-demo/frontend/src/data/: playgroundExamples.ts
sandbox-all-in-one-demo/frontend/src/hooks/: useWebSocket.ts
sandbox-all-in-one-demo/frontend/src/lib/: storage.ts
sandbox-all-in-one-demo/frontend/src/pages/: ChatPage.tsx  SessionsPage.tsx  ViewerPage.tsx
sandbox-all-in-one-demo/frontend/src/stores/: chatStore.ts  sandboxStore.ts  uiStore.ts
sandbox-all-in-one-demo/frontend/src/types/: index.ts  novnc.d.ts
sandbox-all-in-one-demo/src/: __init__.py  ai_code_generator.py  main.py  sandbox_executor.py
(+62 files in other folders)
