[project]
name = "agentrun-aio-demo"
version = "0.1.0"
description = "豆瓣电影评论自动化爬取工具 - 基于 AgentRun AIO Sandbox"
requires-python = ">=3.10"
dependencies = [
    "agentrun-sdk>=0.0.9",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # LangChain 框架（AI 对话能力）
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
    # 爬虫和数据处理
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # 中文分词（情感分析）
    "jieba>=0.42.1",
    # 环境变量管理
    "python-dotenv>=1.0.0",
    # 解决依赖冲突
    "protobuf<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "vncviewer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/vncviewer",
    "/main.py",
    "/pyproject.toml",
    "/README.md",
]
